--- a/index.html
+++ b/index.html
@@ -1,37 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Patounic</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: white;
       margin: 0;
       padding: 0;
-      background-color: #ffffff;
-      font-family: Arial, sans-serif;
-      color: #000000;
     }
+
     header {
-      padding: 1rem;
-      background-color: #f0f0f0;
-      text-align: center;
-      font-size: 2rem;
+      background-color: #000;
+      padding: 1rem 2rem;
+      color: #0a3d62; /* azul escuro */
+      font-size: 1.5rem;
       font-weight: bold;
+      position: absolute;
+      top: 0;
+      left: 0;
     }
-    main {
-      padding: 2rem;
+
+    #login-box, #content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
+    }
+
+    #content {
+      display: none;
+    }
+
+    input[type="password"] {
+      padding: 0.5rem;
+      font-size: 1rem;
+      margin-top: 1rem;
+      border: none;
+      border-radius: 4px;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+      margin-top: 1rem;
+      font-size: 1rem;
+      cursor: pointer;
+      background-color: #0a3d62;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+
+    #error {
+      color: red;
+      margin-top: 1rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    Patounic
-  </header>
-  <main>
-    <!-- Conteúdo principal aqui -->
-  </main>
+  <header>Patounic</header>
+
+  <div id="login-box">
+    <h2>Digite a senha para entrar:</h2>
+    <input type="password" id="password" placeholder="Senha" />
+    <button onclick="checkPassword()">Entrar</button>
+    <p id="error"></p>
+  </div>
+
+  <div id="content">
+    <h1>Bem-vindo ao site secreto!</h1>
+    <p>Você desbloqueou o conteúdo protegido.</p>
+  </div>
+
+  <script>
+    function checkPassword() {
+      const senha = document.getElementById("password").value;
+      const erro = document.getElementById("error");
+
+      if (senha === "123") {
+        document.getElementById("login-box").style.display = "none";
+        document.getElementById("content").style.display = "flex";
+      } else {
+        erro.textContent = "Senha incorreta.";
+      }
+    }
+  </script>
 </body>
 </html>
 
