--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
       gap: 1rem;
     }
 
+    /* 🔍 Pesquisa */
     .search-container {
+      display: flex;
+      align-items: center;
       position: relative;
     }
 
@@ -45,32 +48,30 @@
 
     #search-form {
       display: none;
-      position: absolute;
-      top: 30px;
-      right: 0;
-      background-color: #111;
-      padding: 0.5rem;
+      margin-left: 0.5rem;
+      background-color: rgba(10, 61, 98, 0.5);
+      padding: 0.4rem 0.6rem;
       border-radius: 20px;
       box-shadow: 0 0 5px rgba(255,255,255,0.2);
     }
 
     #search-form input {
-      padding: 0.4rem;
-      border-radius: 20px;
+      background: transparent;
+      color: white;
       border: none;
       outline: none;
-      width: 160px;
+      width: 140px;
     }
 
     #search-form button {
       background: none;
       border: none;
       color: white;
-      font-size: 1rem;
-      margin-left: 0.5rem;
       cursor: pointer;
+      font-size: 1rem;
     }
 
+    /* Perfil */
     .profile-pic {
       width: 40px;
       height: 40px;
@@ -165,7 +166,7 @@
       <div class="search-container">
         <div class="search-icon" onclick="toggleSearch()">🔍</div>
         <form id="search-form" onsubmit="submitSearch(event)">
-          <input type="text" id="search-input" placeholder="Pesquise..." />
+          <input type="text" id="search-input" placeholder="pesquisar..." />
           <button type="submit">🔍</button>
         </form>
       </div>
@@ -254,16 +255,25 @@
 
     function toggleSearch() {
       const form = document.getElementById("search-form");
-      form.style.display = form.style.display === "block" ? "none" : "block";
+      const input = document.getElementById("search-input");
+
       if (form.style.display === "block") {
-        document.getElementById("search-input").focus();
+        form.style.display = "none";
+      } else {
+        form.style.display = "block";
+        input.focus();
       }
     }
 
     function submitSearch(event) {
       event.preventDefault();
-      const query = document.getElementById("search-input").value;
-      alert(`Você pesquisou por: ${query}`);
+      const query = document.getElementById("search-input").value.trim();
+      if (query) {
+        alert(`Você pesquisou por: ${query}`);
+      }
+      // Limpa e fecha o campo de busca
+      document.getElementById("search-form").style.display = "none";
+      document.getElementById("search-input").value = "";
     }
   </script>
 </body>
