--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
       color: white;
     }
     header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       padding: 1rem;
       background-color: #000;
       font-size: 2rem;
       font-weight: bold;
       color: #001f3f;
-      text-align: left;
+    }
+    .icon-bar {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
     }
     .content {
       display: none;
       flex-direction: column;
       padding: 1rem;
-    }
-    .top-bar {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      gap: 1rem;
     }
     .category-toggle {
       cursor: pointer;
@@ -62,6 +63,9 @@
       padding: 0.3rem 0.7rem;
       border-radius: 20px;
       margin-left: 0.5rem;
+      position: absolute;
+      top: 120%;
+      right: 0;
     }
     .search-box input {
       background: transparent;
@@ -105,7 +109,19 @@
   </style>
 </head>
 <body>
-  <header>Patounic</header>
+  <header>
+    Patounic
+    <div class="icon-bar">
+      <div class="category-toggle" onclick="toggleCategorias()">🦆</div>
+      <div class="search-container">
+        <div class="search-toggle" onclick="toggleSearch()">🔍</div>
+        <div class="search-box" id="search-box">
+          <input type="text" id="search-input" placeholder="pesquise..." onkeydown="handleSearchKey(event)" />
+        </div>
+      </div>
+      <div class="profile-icon" onclick="escolherFoto()"></div>
+    </div>
+  </header>
 
   <div id="password-container">
     <label for="senha">Digite a senha para entrar:</label>
@@ -114,26 +130,16 @@
   </div>
 
   <div id="site-content" class="content">
-    <div class="top-bar">
-      <div class="category-toggle" onclick="toggleCategorias()">🦆</div>
-      <div class="categories" id="categorias">
-        <span>anime</span>
-        <span>comedia</span>
-        <span>ação</span>
-        <span>terror</span>
-        <span>gospel</span>
-        <span>drama</span>
-        <span>romance</span>
-        <span>aventura</span>
-        <span>ciencia</span>
-      </div>
-      <div class="search-container">
-        <div class="search-toggle" onclick="toggleSearch()">🔍</div>
-        <div class="search-box" id="search-box">
-          <input type="text" id="search-input" placeholder="pesquise..." onkeydown="handleSearchKey(event)" />
-        </div>
-      </div>
-      <div class="profile-icon" onclick="escolherFoto()"></div>
+    <div class="categories" id="categorias">
+      <span>anime</span>
+      <span>comedia</span>
+      <span>ação</span>
+      <span>terror</span>
+      <span>gospel</span>
+      <span>drama</span>
+      <span>romance</span>
+      <span>aventura</span>
+      <span>ciencia</span>
     </div>
   </div>
 
