--- a/index.html
+++ b/index.html
@@ -11,51 +11,38 @@
       background-color: #000;
       font-family: Arial, sans-serif;
       color: white;
-      overflow-x: hidden;
     }
-
     header {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem;
-      background-color: transparent;
+      background-color: #000;
       font-size: 2rem;
       font-weight: bold;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 2;
     }
-
     .header-left {
       display: flex;
       align-items: center;
       gap: 0.5rem;
     }
-
     .header-left span {
       color: #001f3f;
     }
-
     .icon-bar {
       display: none;
       align-items: center;
       gap: 1rem;
     }
-
     .content {
       display: none;
       flex-direction: column;
       padding: 1rem;
     }
-
     .category-toggle {
       cursor: pointer;
       font-size: 1.5rem;
     }
-
     .categories {
       display: none;
       background-color: #111;
@@ -63,18 +50,15 @@
       border-radius: 0.5rem;
       margin-top: 0.5rem;
     }
-
     .categories span {
       display: block;
       margin: 0.2rem 0;
       cursor: pointer;
     }
-
     .search-container {
       display: flex;
       align-items: center;
     }
-
     .search-box {
       display: none;
       align-items: center;
@@ -83,7 +67,6 @@
       border-radius: 20px;
       margin-left: 0.5rem;
     }
-
     .search-box input {
       background: transparent;
       color: white;
@@ -92,12 +75,10 @@
       width: 150px;
       font-size: 1rem;
     }
-
     .search-toggle {
       cursor: pointer;
       font-size: 1.2rem;
     }
-
     .profile-icon {
       width: 32px;
       height: 32px;
@@ -111,7 +92,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      height: 80vh;
       background-image: url('https://i.pinimg.com/736x/31/9d/88/319d889cb884fd2bdfce68c7eacc3017.jpg');
       background-size: cover;
       background-position: center;
