--- a/index.html
+++ b/index.html
@@ -65,15 +65,17 @@
 
     .categories {
       display: none;
-      background-color: #111;
-      padding: 0.5rem;
+      background-color: rgba(20, 20, 20, 0.85);
+      padding: 0.8rem;
       border-radius: 0.5rem;
-      margin-top: 0.5rem;
+      margin-top: 3.5rem; /* deslocado mais abaixo */
+      border: 1px solid #555; /* borda cinza suave */
+      width: max-content;
     }
 
     .categories span {
       display: block;
-      margin: 0.2rem 0;
+      margin: 0.3rem 0;
       cursor: pointer;
     }
 
@@ -124,6 +126,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      position: relative;
     }
 
     .senha-box {
@@ -134,6 +137,19 @@
       flex-direction: column;
       align-items: center;
       z-index: 2;
+    }
+
+    .patounic-title {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      font-size: 2rem;
+      font-weight: bold;
+      background: linear-gradient(90deg, #0a1123, #1a2b59);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-shadow: 0 0 6px rgba(26, 43, 89, 0.6);
+      z-index: 3;
     }
 
     input[type="password"] {
@@ -166,23 +182,23 @@
 <body>
   <header>
     <div class="header-left">
-      <span>Patounic</span>
-      <div class="home-btn" id="home-btn" onclick="voltarHome()" style="display: none;">🏠</div>
+      <div class="home-btn" id="home-btn" onclick="voltarHome()" style="display: none;">🎬</div>
     </div>
     <div class="icon-bar" id="icon-bar">
       <div class="category-toggle" onclick="toggleCategorias()">🦆</div>
       <div class="search-container">
         <div class="search-box" id="search-box">
           <input type="text" id="search-input" placeholder="pesquise..." onkeydown="handleSearchKey(event)" />
-          <div class="search-toggle" onclick="toggleSearch()">🔍</div>
+          <div class="search-toggle" onclick="toggleSearch()">🍿</div>
         </div>
-        <div class="search-toggle" id="search-icon" onclick="toggleSearch()">🔍</div>
+        <div class="search-toggle" id="search-icon" onclick="toggleSearch()">🍿</div>
       </div>
       <div class="profile-icon" onclick="escolherFoto()"></div>
     </div>
   </header>
 
   <div id="password-container">
+    <div class="patounic-title">patounic</div>
     <div class="senha-box">
       <label for="senha">Digite a senha para entrar:</label>
       <input type="password" id="senha" placeholder="Senha">
