--- a/index.html
+++ b/index.html
@@ -62,15 +62,12 @@
       cursor: pointer;
       font-size: 1.5rem;
     }
-
     .categories {
       display: none;
-      background-color: rgba(20, 20, 20, 0.85);
-      padding: 0.8rem;
+      background-color: #111;
+      padding: 0.5rem;
       border-radius: 0.5rem;
-      margin-top: 3.5rem; /* deslocado mais abaixo */
-      border: 1px solid #555; /* borda cinza suave */
-      width: max-content;
+      margin-top: 4rem;
     }
 
     .categories span {
